force-app/main/default/objects/SFDC_Channel_Budget__c/fields/Allocated_Budget__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Budget__c</fullName>
    <description>Total amount that is allocated to this buget. Manual entry.</description>
    <label>Allocated Budget</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>