force-app/main/default/objects/SFDC_Channel_Budget__c/fields/Committed_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_To_Date__c</fullName>
    <formula>Approved_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requests Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>