force-app/main/default/objects/SFDC_Channel_Budget__c/fields/Unclaimed__c.field-meta.xml
<CustomField>
    <fullName>Unclaimed__c</fullName>
    <description>Total committed less total claimed to date.</description>
    <formula>Approved_Request__c  -  Approved_Claims__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unclaimed Requests</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>